
	* libbfd.c (read_signed_leb128): Use an unsigned type for 'shift'
	to avoid a compile time warning.

	* coff-alpha.c (alpha_adjust_reloc_in): Remove redundant test from
	BFD_ASSERT.

	* coff-tic4x.c (coff_rtype_to_howto): Move definition before
	inclusion of coffcode.h so that it is actually picked up.

	* coffcode.h (coff_std_swap_table): Add an unused attribute in
	case it is not used.

2005-02-12  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (toc_adjusting_stub_needed): Return true for
	old-style branches to undefined dot-symbols which will be
	satisfied by a plt call.

2005-02-11  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (move_plt_plist): New function, extracted from..
	(ppc64_elf_copy_indirect_symbol): ..here.
	(func_desc_adjust): Use move_plt_plist.

2005-02-10  Paul Brook  <paul@codesourcery.com>

	* elf32-arm.c (elf32_arm_final_link_relocate): Handle R_ARM_THM_PC9.

2005-02-10  Paul Brook  <paul@codesourcery.com>

	* elflink.c (bfd_elf_record_link_assignment): Make hidden and internal
	symbols local.
	(elf_link_renumber_hash_table_dynsyms): Ignore local symbols.
	(elf_link_renumber_local_hash_table_dynsyms): New function.
	(_bfd_elf_link_renumber_dynsyms): Number local dynamic symbols.

2005-02-10  Jakub Jelinek  <jakub@redhat.com>

	* bfd-in.h (BFD_LINKER_CREATED): Define.
	* bfd-in2.h: Rebuilt.
	* elflink.c (bfd_elf_size_dynamic_sections): Disregard
	BFD_LINKER_CREATED bfds when determining input bfds without
	.note.GNU-stack section.

2005-02-10  Maciej W. Rozycki  <macro@mips.com>

	* elf64-mips.c (mips16_gprel_reloc): Update a comment.
	* elfn32-mips.c (mips16_gprel_reloc): Keep R_MIPS16_GPREL
	relocations against external symbols unchanged.

2005-02-08  Paul Brook  <paul@codesourcery.com>

	* elflink.c (elf_link_input_bfd): Ignore symbols from null input
	sections.

2005-02-08  Hans-Peter Nilsson  <hp@axis.com>

	* elflink.c (elf_link_add_object_symbols): Don't add "warning: "
	prefix here.
